fix domain error and language switch error

--- a/css/theme-default.css
+++ b/css/theme-default.css
@@ -98,7 +98,8 @@ body {
 .dropdown-content {
   display: none;
   position: absolute;
-		width:100%;
+	width:100%;
+	z-index: 991;
 }
 
 .dropdown.open .dropdown-content{
